# smg-audio-reader

./: .gitignore  Cargo.toml  README.md
src/: audio_writer.rs  convert.rs  ext.rs  file_ext.rs  into_wav.rs  main.rs  parse.rs  seek_ext.rs  serde.rs  structs.rs  verify.rs
stream/: SMG_ev_kinotan_strm.ast  SMG_ev_kuppabt01_strm.ast  SMG_ev_prolo04_strm.ast  SMG_galaxy15_hurry_strm.ast  SMG_galaxy26_strm.ast  SMG_galaxy_inter_strm.ast  SMG_second_astro_strm.ast
