[package]
name = "smg-audio-reader"
version = "0.2.0"
authors = ["JohnCorby <williamforgames6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"
hound = "3.4.0"
